Version 1.7.0