@@ -5,19 +5,22 @@
 
     <groupId>com.kodedu</groupId>
     <artifactId>AsciidocFX</artifactId>
-    <version>1.6.9</version>
+    <version>1.7.0</version>
     <packaging>jar</packaging>
 
     <name>AsciidocFX</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <java.version>12</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
         <mainClass>com.kodedu.boot.AppStarter</mainClass>
         <install4j.home>/home/travis/build/asciidocfx/AsciidocFX/install4j7.0.6</install4j.home>
         <install4j.licenseKey>${env.LICENSE_KEY_7}</install4j.licenseKey>
+        <openjfx.version>12</openjfx.version>
+        <ikonli.version>11.3.3</ikonli.version>
+        <jaxb.version>2.3.2</jaxb.version>
     </properties>
 
     <organization>
@@ -39,7 +42,7 @@
         <dependency>
             <groupId>com.dooapp.fxform2</groupId>
             <artifactId>core</artifactId>
-            <version>8.2.4</version>
+            <version>9.0.0</version>
             <exclusions>
                 <exclusion>
                     <artifactId>validation-api</artifactId>
@@ -83,17 +86,38 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-undertow</artifactId>
+            <exclusions>
+                <exclusion>
+                    <artifactId>jboss-annotations-api_1.2_spec</artifactId>
+                    <groupId>org.jboss.spec.javax.annotation</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.jooq</groupId>
             <artifactId>joox</artifactId>
-            <version>1.4.0</version>
+            <version>1.6.1</version>
         </dependency>
         <!--PDF Generate with Apache FOP-->
         <dependency>
             <groupId>org.apache.xmlgraphics</groupId>
             <artifactId>fop</artifactId>
             <version>2.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>${jaxb.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-xjc</artifactId>
+            <version>${jaxb.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-jxc</artifactId>
+            <version>${jaxb.version}</version>
         </dependency>
         <dependency>
             <groupId>org.zeroturnaround</groupId>
@@ -118,7 +142,8 @@
         <dependency>
             <groupId>com.install4j</groupId>
             <artifactId>install4j-runtime</artifactId>
-            <version>7.0.6</version>
+            <version>7.0.11</version>
+<!--            <scope>provided</scope>-->
         </dependency>
         <dependency>
             <groupId>org.carrot2</groupId>
@@ -140,27 +165,48 @@
         <dependency>
             <groupId>org.kordamp.ikonli</groupId>
             <artifactId>ikonli-core</artifactId>
-            <version>2.4.0</version>
+            <version>${ikonli.version}</version>
         </dependency>
         <dependency>
             <groupId>org.kordamp.ikonli</groupId>
             <artifactId>ikonli-javafx</artifactId>
-            <version>2.4.0</version>
+            <version>${ikonli.version}</version>
         </dependency>
         <dependency>
             <groupId>org.kordamp.ikonli</groupId>
             <artifactId>ikonli-fontawesome-pack</artifactId>
-            <version>2.4.0</version>
+            <version>${ikonli.version}</version>
         </dependency>
         <dependency>
             <groupId>com.kodedu.terminalfx</groupId>
             <artifactId>terminalfx</artifactId>
-            <version>1.0.8</version>
+            <version>1.1.0</version>
         </dependency>
         <dependency>
             <groupId>com.ibm.icu</groupId>
             <artifactId>icu4j-charset</artifactId>
             <version>64.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>${openjfx.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>${openjfx.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-web</artifactId>
+            <version>${openjfx.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>${openjfx.version}</version>
         </dependency>
 
     </dependencies>
@@ -180,8 +226,16 @@
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <release>${java.version}</release>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>3.0.2</version>
+                <version>3.1.1</version>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
@@ -206,9 +260,71 @@
                         -Duser.language=en
                         -Duser.country=US
                         -Dfile.encoding=UTF-8
-                        -XX:+UseG1GC
                         -Xmx1G
                         -Djava.awt.headless=false
+                        --illegal-access=permit
+                        --add-exports
+                        javafx.graphics/com.sun.javafx.scene.layout=ALL-UNNAMED
+                        --add-exports
+                        javafx.graphics/com.sun.javafx.util=ALL-UNNAMED
+                        --add-exports
+                        javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                        --add-exports
+                        javafx.graphics/com.sun.javafx.sg.prism=ALL-UNNAMED
+                        --add-exports
+                        javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED
+                        --add-exports
+                        javafx.base/com.sun.javafx.logging=ALL-UNNAMED
+                        --add-exports
+                        javafx.graphics/com.sun.prism=ALL-UNNAMED
+                        --add-exports
+                        javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
+                        --add-exports
+                        javafx.graphics/com.sun.javafx.geom.transform=ALL-UNNAMED
+                        --add-exports
+                        javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED
+                        --add-exports
+                        javafx.graphics/com.sun.glass.utils=ALL-UNNAMED
+                        --add-exports
+                        javafx.graphics/com.sun.javafx.font=ALL-UNNAMED
+                        --add-exports
+                        javafx.graphics/com.sun.javafx.scene.input=ALL-UNNAMED
+                        --add-exports
+                        javafx.graphics/com.sun.javafx.scene.text=ALL-UNNAMED
+                        --add-exports
+                        javafx.base/com.sun.javafx.event=ALL-UNNAMED
+                        --add-exports
+                        javafx.base/com.sun.javafx.reflect=ALL-UNNAMED
+                        --add-exports
+                        javafx.base/com.sun.javafx.beans=ALL-UNNAMED
+                        --add-exports
+                        javafx.base/com.sun.javafx.collections=ALL-UNNAMED
+                        --add-exports
+                        javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED
+                        --add-exports
+                        javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED
+                        --add-exports
+                        javafx.base/com.sun.javafx.binding=ALL-UNNAMED
+                        --add-exports
+                        javafx.graphics/com.sun.javafx.geom=ALL-UNNAMED
+                        --add-exports
+                        javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED
+                        --add-exports
+                        javafx.base/com.sun.javafx=ALL-UNNAMED
+                        --add-exports
+                        javafx.graphics/com.sun.prism.paint=ALL-UNNAMED
+                        --add-exports
+                        javafx.graphics/com.sun.scenario.effect=ALL-UNNAMED
+                        --add-exports
+                        javafx.graphics/com.sun.javafx.text=ALL-UNNAMED
+                        --add-opens
+                        javafx.base/com.sun.javafx.collections=ALL-UNNAMED
+                        --add-exports
+                        javafx.graphics/com.sun.scenario.effect.impl.prism=ALL-UNNAMED
+                        --add-exports
+                        javafx.graphics/com.sun.javafx.css=ALL-UNNAMED
+                        --add-exports
+                        javafx.base/com.sun.javafx.property=ALL-UNNAMED
                     </extraJvmArguments>
                     <!--&#45;&#45;add-opens javafx.base/com.sun.javafx.collections=javafx.web-->
                     <!--&#45;&#45;add-exports javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED-->
